# ECRStudio

./: .gitignore  ECRStudio.command  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: FORMAT_ECR.md
ecrstudio/: __init__.py  app.py  constants.py  dialogs.py  diff.py  export.py  parser.py  structures.py  themes.py  tree_builder.py  undo.py  validator.py  widgets.py  wizard.py
examples/: exemple2.ECR
scripts/: build_exe.py
tests/: conftest.py  test_diff.py  test_export.py  test_parser.py  test_structures.py  test_tree_builder.py  test_undo.py  test_validator.py
