[project]
name = "ecrstudio"
version = "3.0.0"
description = "Graphical editor for ECR accounting files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Geoffrey FLEUR"},
]
keywords = ["ecr", "accounting", "editor", "bobbee"]

[project.scripts]
ecrstudio = "ecrstudio.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ecrstudio"]
omit = [
    "ecrstudio/app.py",
    "ecrstudio/dialogs.py",
    "ecrstudio/wizard.py",
    "ecrstudio/widgets.py",
    "ecrstudio/themes.py",
    "ecrstudio/diff.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
